	  + Improved regression test system
	  + Basic consistency check method for geometry collections
	  + Support for (Hex)(E)wkb
	  + Autoprobing DriverWrapper for HexWKB / EWKT switching
	- full autoconf-based configuration
	- added scale() and transscale() companion methods to translate()
	- initial implementation of postgis_proc_upgrade script
	- NEW line_substring() function

PostGIS 1.0.1
2005/05/24
	- BUGFIX in shp2pgql escape functions
	- BUGFIX in 3d computation of lenght_spheroid
	- better support for concurrent postgis in multiple schemas
	- documentation fixes
	- BUGFIX in join selectivity estimator returning invalid estimates (>1)
	- jdbc2: compile with "-target 1.2 -source 1.2" by default
	- NEW support for custom createdb options in postgis_restore.pl
	- NEW -k switch for pgsql2shp
	- BUGFIX in pgsql2shp attribute names unicity enforcement
	- BUGFIX in Paris projections definitions
	- postgis_restore.pl cleanups

PostGIS 1.0.0
2005/04/19
	- NEW manual pages for loader/dumper
	- NEW shp2pgsql support for old (HWGEOM) postgis versions
	- NEW -p flag for shp2pgsql
	- BUGFIX in transform() releasing random memory address
	- BUGFIX in force_3dm() allocating less memory then required
	- NEW chapter about OGC compliancy enforcement
	- BUGFIX in shp2pgsql escape of values starting with "'" or "\t" 
	- NEW autoconf support for JTS lib
	- BUGFIX in estimator testers (support for LWGEOM and schema parsing)
	- BUGFIX in join selectivity estimator (defaults, leaks, tuplecount, sd)

PostGIS 1.0.0RC6
2005/03/30
	- BUGFIX dumper 64bit
	- BUGFIX in multi()
	- BUGFIX in postgis_restore.pl script
	- early return [when noop] from multi()
	- dropped {x,y}{min,max}(box2d) functions

PostGIS 1.0.0RC5
2005/03/25
	- small build scripts refinements
	- BUGFIX in box3d computation (yes, another!)
	- BUGFIX in estimated_extent()
        - additional performance tips documented

PostGIS 1.0.0RC4
2005/03/18
	- early return from force_collection
	- segfault fix in geom_accum()