@@ -1006,6 +1006,7 @@ extern int ptarray_isclosed2d(const POINTARRAY *pa);
 extern int32 lwgeom_nrings_recursive(uchar *serialized);
 extern void ptarray_reverse(POINTARRAY *pa);
 extern POINTARRAY *ptarray_substring(POINTARRAY *, double, double);
+extern double ptarray_locate_point(POINTARRAY *, POINT2D *);
 
 // Ensure every segment is at most 'dist' long.
 // Returned LWGEOM might is unchanged if a POINT.
